# proc-macro-workshop

./: main.rs
bitfield/impl/: Cargo.toml
bitfield/impl/src/: bits.rs  lib.rs
bitfield/src/: lib.rs
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
seq/: Cargo.toml
seq/seq-impl/: Cargo.toml
seq/seq-impl/src/: lib.rs
seq/tests/: 03-expand-four-errors.stderr
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: 02-not-enum.stderr  03-out-of-order.stderr  04-variants-with-data.stderr  05-match-expr.stderr  06-pattern-path.stderr  07-unrecognized-pattern.stderr
